--- a/Projekt/app/src/main/res/layout/fragment_szczegoly.xml
+++ b/Projekt/app/src/main/res/layout/fragment_szczegoly.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:weightSum="1">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -19,4 +21,26 @@
             android:src="@mipmap/ic_checkboxmen"/>
 
     </FrameLayout>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:id="@+id/comment"
+        android:hint="@string/uwagi"
+        android:textColor="@color/input_login"
+        android:textColorHint="@color/input_login_hint"
+        android:layout_weight="0.91" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/enter"
+        android:id="@+id/button4"
+        android:layout_gravity="right"
+        android:background="@drawable/enter_button"
+        />
+
 </LinearLayout>
