--- a/Projekt/app/src/main/res/layout/fragment_szczegoly.xml
+++ b/Projekt/app/src/main/res/layout/fragment_szczegoly.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center"
-    android:weightSum="1">
+    android:fillViewport="true">
+<LinearLayout
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/obrazek">
         <ImageView android:id="@+id/image_areas"
             android:layout_width="match_parent"
             android:layout_height="377dp"
@@ -20,7 +23,9 @@
             android:scaleType="fitCenter"
             android:src="@mipmap/ic_checkboxmen"/>
 
+
     </FrameLayout>
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -29,18 +34,21 @@
         android:paddingRight="20dp"
         android:id="@+id/comment"
         android:hint="@string/uwagi"
+        android:inputType="textMultiLine"
+        android:ems="10"
+        android:layout_gravity="fill"
         android:textColor="@color/input_login"
-        android:textColorHint="@color/input_login_hint"
-        android:layout_weight="0.91" />
+        android:textColorHint="@color/input_login_hint" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/enter"
-        android:id="@+id/button4"
+        android:id="@+id/enterDetails"
         android:layout_gravity="right"
         android:background="@drawable/enter_button"
         />
 
 </LinearLayout>
+    </ScrollView>
