--- a/Projekt/app/src/main/res/layout/fragment_top_rated.xml
+++ b/Projekt/app/src/main/res/layout/fragment_top_rated.xml
@@ -13,9 +13,11 @@
         android:layout_height="wrap_content"
         android:singleLine="true"
         android:hint="@string/hint_name"
+        android:textColor="@color/text"
+        android:textColorHint="@color/accent"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:textColor="@color/text"/>
+        android:layout_marginTop="43dp" />
 
 
 
@@ -28,6 +30,7 @@
         android:inputType="textEmailAddress"
         android:hint="@string/hint_lastname"
         android:textColor="@color/text"
+        android:textColorHint="@color/accent"
         android:layout_below="@+id/input_name"
         android:layout_alignParentStart="true" />
 
@@ -50,21 +53,21 @@
         android:id="@+id/sex"
         android:layout_below="@+id/input_lastname"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="44dp">
+        android:layout_marginTop="37dp">
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:id="@+id/women_rbn"
             android:text="@string/women"
             android:textColor="@drawable/rbtn_textcolor_selector"
-            android:background="@drawable/rbtn_selector"/>
+            android:button="@drawable/rbtn_selector"/>
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:id="@+id/men_rbn"
             android:text="@string/men"
             android:textColor="@drawable/rbtn_textcolor_selector"
-            android:background="@drawable/rbtn2_selector" />
+            android:button="@drawable/rbtn2_selector" />
     </RadioGroup>
 
     <Button android:id="@+id/button"
@@ -74,23 +77,26 @@
         android:background="@color/accent"
         android:textColor="@android:color/white"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="zrób zdjęcie"
+        android:id="@+id/button3"
+        android:background="@drawable/enter_button"
+        android:layout_below="@+id/sex"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="104dp" />
+        android:layout_marginTop="40dp" />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
-        android:layout_above="@+id/button"
-        android:layout_alignEnd="@+id/sex" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="zrób zdjęcie"
-        android:id="@+id/button3"
-        android:layout_alignBottom="@+id/sex"
-        android:layout_toEndOf="@+id/imageView" />
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="54dp"
+        android:layout_below="@+id/button3" />
 
 
     <!--  <Button
