--- a/Projekt/app/src/main/res/values/colors.xml
+++ b/Projekt/app/src/main/res/values/colors.xml
@@ -19,4 +19,9 @@
     <color name="btn_login_bg">#eceef1</color>
     <color name="lbl_name">#333333</color>
     <color name="btn_logut_bg">#ff6861</color>
+
+    <color name="GREEN">#00FF00</color>
+    <color name="YELLOW">#FFFF00</color>
+    <color name="RED">#FF0000</color>
+    <color name="BLACK">#000000</color>
 </resources>
