--- a/Projekt/app/src/main/res/layout/activity_main.xml
+++ b/Projekt/app/src/main/res/layout/activity_main.xml
@@ -17,84 +17,98 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:text="@string/longitude"
+                android:text="Lokalizacja"
+                android:gravity="center"
+                android:layout_gravity="center"
                 />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:id="@+id/longitude"
-                android:text="długość" />
         </TableRow>
 
         <TableRow
             android:minHeight="120px">
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/latitude" />
+                android:layout_height="fill_parent"
+                android:id="@+id/longitude"
+                android:text="[  długość,  "
+                android:textColor="@color/BLACK"
+                android:textSize="20dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/latitude"
-                android:text="szerokosc"
+                android:text="szerokosc  ]"
+                android:textColor="@color/BLACK"
+                android:textSize="20dp"
                 />
         </TableRow>
-        <TableRow
-            android:minHeight="120px">
+        </TableLayout>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/rozmiar"/>
+                android:text="@string/rozmiar"
+                android:layout_below="@+id/tableLayout"
+                android:layout_alignStart="@+id/incidentSize"
+                android:id="@+id/textView7" />
             <RadioGroup
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:id="@+id/incidentSize">
+                android:orientation="vertical"
+                android:id="@+id/incidentSize"
+                android:layout_alignTop="@+id/description"
+                android:layout_alignParentStart="true">
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/small"
                     android:text="@string/małe"
-                    android:textColor="@color/text"/>
+                    android:textColor="@color/text"
+                    android:button="@drawable/custom_radio_button"/>
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/middle"
                     android:text="@string/średnie"
-                    android:textColor="@color/text"/>
+                    android:textColor="@color/text"
+                    android:button="@drawable/custom_radio_button"/>
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/big"
                     android:text="@string/duże"
-                    android:textColor="@color/text"/>
+                    android:textColor="@color/text"
+                    android:button="@drawable/custom_radio_button"/>
             </RadioGroup>
-        </TableRow>
-        <TableRow
-            android:minHeight="120px">
+
            
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/description"
                 android:hint="@string/opis"
+                android:textColorHint="@color/input_login_hint"
+                android:inputType="textMultiLine"
                 android:textColor="@color/text"
-                />
-        </TableRow>
+                android:layout_below="@+id/textView7"
+                android:layout_toStartOf="@+id/button2"
+                android:layout_marginTop="32dp" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tekst1"
-            android:text="tekst"/>
+
+            android:layout_above="@+id/createIncident" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tekst2"
-            android:text="tekst"/>
 
-    </TableLayout>
+            android:layout_alignTop="@+id/tekst1"
+            android:layout_above="@+id/createIncident"
+            android:layout_toEndOf="@+id/description" />
+
 
     <Button
         android:layout_width="wrap_content"
@@ -110,7 +124,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
+
         android:id="@+id/textView6"
         android:layout_above="@+id/button2"
         android:layout_alignParentStart="true" />
@@ -119,7 +133,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
+
         android:id="@+id/name"
         android:layout_alignTop="@+id/textView6"
         android:layout_toEndOf="@+id/textView6" />
@@ -128,7 +142,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
+
         android:id="@+id/email"
         android:layout_alignTop="@+id/name"
         android:layout_toEndOf="@+id/name" />
@@ -137,10 +151,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/createIncident"
-        android:layout_above="@+id/name"
-        android:layout_alignParentEnd="true"
         android:src="@drawable/siren_selector"
-        android:background="@color/white"/>
+        android:background="@color/white"
+        android:layout_above="@+id/email"
+        android:layout_alignEnd="@+id/tableLayout" />
+
+
 
 
 </RelativeLayout>
