--- a/Projekt/app/src/main/res/values/styles.xml
+++ b/Projekt/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Material">
+    <style name="AppCompatTheme" parent="android:Theme.Material">
         <!-- Customize your theme here. -->
       <!--  <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
